edited now comments on index.html

--- a/index.html
+++ b/index.html
@@ -7,30 +7,30 @@
   </head>
 
   <body>
-    <!--- Header-->
+    <!---Header----------------------------------------->
     <div class="header">
       <img class="logo"src="img/gmail.png" alt="Gmail Logo">
       <span id="gmail">Gmail</span>
       <hr>
     </div>
-    <!--Fine Header-->
+    <!---Fine Header------------------------------------->
 
-    <!----------Form---------------->
+    <!---Form-------------------------------------------->
     <div>
       <form>
         <input type="text" placeholder="Search">
         <button> VAI </button>
       </form>
     </div>
-    <!---------Fine Form---------->
+    <!---Fine Form----------------------------------------->
 
-    <!---------Unread Counter--------->
+    <!---Unread Counter------------------------------------>
     <div class="counter">
-      <p>You have <span class="number">301</span> unread</p>
+      <p>You have <span class="number">30</span> unread</p>
     </div>
-    <!---------Fine Unread Counter--------->
+    <!---Fine Unread Counter-------------------------------->
 
-    <!----------------Content--------------->
+    <!---Content--------------------------------------------->
 
     <div class="content">
       <hr>
@@ -64,14 +64,14 @@
 
       <hr>
     </div>
-    <!---------------Fine Content--------------->
+    <!---Fine Content----------------------------------------------->
 
-    <!---------------Footer--------------->
+    <!---Footer----------------------------------------------------->
     <div class="footer">
       <span><strong>GMail</strong></span> <span id="owner">powered by Davide</span>
     </div>
 
-      <!---------------Fine Footer--------------->
+      <!---Fine Footer------------------------------------------------->
 
 
   </body>
